--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <link rel="stylesheet" href="./index.css"/>
 </head>
 <body>
-    <h1>Hello world</h1>
+    <h1>Hello world from HTML</h1>
     <div id="root"></div>
 
 
